--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.1.0",
     "angular-code-input": "^2.0.0",
     "bootstrap": "^5.3.2",
+    "ngx-pagination": "^6.0.3",
     "ngx-spinner": "^16.0.2",
     "popper.js": "^1.16.1",
     "primeicons": "^6.0.1",
