--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "bootstrap": "^5.3.2",
     "ngx-pagination": "^6.0.3",
     "ngx-spinner": "^16.0.2",
+    "ngx-toastr": "^17.0.2",
     "popper.js": "^1.16.1",
     "primeicons": "^6.0.1",
     "primeng": "^15.4.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.9.0",
     "swiper": "^8.4.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
