--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start:open": "ng serve --proxy-config proxy.conf.json -o",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --aot --configuration production --source-map",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
