--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "warid",
   "version": "0.0.0",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "ng": "ng",
     "start:open": "ng serve --proxy-config proxy.conf.json -o",
