--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,6 @@
 # Ignore node_modules
 node_modules
-
-# Ignore build artifacts
-*.log
-npm-debug.log*
-
-# Ignore development files
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+dist
 
 # Ignore git files
 .git
