--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,17 @@
 # Ignore node_modules
 node_modules
+
+# Ignore build artifacts
 dist
+*.log
+npm-debug.log*
+
+# Ignore development files
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Ignore git files
 .git
