--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^15.1.0",
     "angular-code-input": "^2.0.0",
     "bootstrap": "^5.3.2",
+    "ng-circle-progress": "^1.7.1",
     "ngx-pagination": "^6.0.3",
     "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^17.0.2",
